--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -42,6 +42,9 @@
             android:layout_height="45dp"
             android:src="@drawable/business"/>
         <TextView
+            android:id="@+id/business"
+            android:onClick="navigate"
+            android:textSize="18sp"
             android:gravity="center"
             android:textColor="@color/yellow"
             android:layout_width="145dp"
@@ -59,6 +62,9 @@
                 android:layout_height="45dp"
                 android:src="@drawable/computer"/>
             <TextView
+                android:id="@+id/computer"
+                android:onClick="navigate"
+                android:textSize="18sp"
                 android:gravity="center"
                 android:textColor="@color/yellow"
                 android:layout_width="145dp"
@@ -76,6 +82,9 @@
                 android:layout_height="45dp"
                 android:src="@drawable/music"/>
             <TextView
+                android:id="@+id/entertainment"
+                android:onClick="navigate"
+                android:textSize="18sp"
                 android:gravity="center"
                 android:textColor="@color/yellow"
                 android:layout_width="145dp"
@@ -93,6 +102,9 @@
                 android:layout_height="45dp"
                 android:src="@drawable/news"/>
             <TextView
+                android:id="@+id/general"
+                android:onClick="navigate"
+                android:textSize="18sp"
                 android:gravity="center"
                 android:textColor="@color/yellow"
                 android:layout_width="145dp"
@@ -110,6 +122,9 @@
                 android:layout_height="45dp"
                 android:src="@drawable/health"/>
             <TextView
+                android:id="@+id/health"
+                android:onClick="navigate"
+                android:textSize="18sp"
                 android:gravity="center"
                 android:textColor="@color/yellow"
                 android:layout_width="145dp"
@@ -127,6 +142,9 @@
                 android:layout_height="45dp"
                 android:src="@drawable/fav"/>
             <TextView
+                android:id="@+id/fav"
+                android:onClick="navigate"
+                android:textSize="18sp"
                 android:gravity="center"
                 android:textColor="@color/yellow"
                 android:layout_width="145dp"
